<resources>
    <string name="app_name">Vatapp</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="cost_or_total_price">Cost or Total Price</string>
    <string name="select_vat_percentage">Select Vat Percentage:</string>
    <string name="round_up_total">Round Up Total??</string>
    <string name="calcuate_vat">CALCUATE VAT</string>
</resources>