<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:viewBindingIgnore="true"
    tools:ignore="ExtraText">
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_or_total_price"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_vat_percentage"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="١٦dp"
        tools:layout_editor_absoluteY="٧٤dp" />
    <RadioGroup
        android:id="@+id/rg_vat_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/v_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/v_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15" />

        <RadioButton
            android:id="@+id/v_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up_total"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcuate_vat"
        style="@style/Theme.MaterialComponents.Dialog.FixedSize"/>


</LinearLayout>